test/banana/grammar/should_fail/wrong_symbol_in_connection.banana
# This should fail
a -> b * c
# RAISE ParseException